# growzones

./: .gitignore  Makefile  PLAN.md  README.md
docs/: CAMERA_SETUP.md
mac/: README.md  install.sh  pyproject.toml  smoke_test.py
mac/growzones/: auto_cull.py  bundle.py  bundles.py  cli.py  growzones_app.py  heatmap.py  locations.py  pi_client.py  sidebar.py  state.py  sun_mask.py  timelapse.py  zones.py
mac/growzones/pages/: 01_Camera.py  01_Locations.py  02_Bundles.py  02_Import.py  03_Days.py  04_Cull.py  05_Process.py  06_Results.py  07_Pi.py  08_Capture.py  09_Pi_Data.py
pi/: README.md  install.sh  pyproject.toml
pi/app/: calibrate.py  camera.py  capture.py  export.py  main.py  mjpeg.py  sessions.py  setup_wizard.py  storage.py
pi/app/static/: capture.js  data.js  live.js  setup.js
pi/app/templates/: base.html  capture.html  data.html  live.html  setup.html
pi/systemd/: growzones.service
