[project]
name = "growzones"
version = "0.2.0"
description = "GrowZones Mac side: live view, calibrate, and download bundles from the Pi"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pillow",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["growzones*"]
