[project]
name = "growzones-pi"
version = "0.2.0"
description = "Capture appliance for GrowZones sun mapping (Raspberry Pi side)"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
